Make methods class static